--- a/dinov2/configs/train/vitl16_short.yaml
+++ b/dinov2/configs/train/vitl16_short.yaml
@@ -1,6 +1,6 @@
 # this corresponds to the default config
 train:
-  dataset_path: RecursiveImageDataset:root=~/.datasets
+  dataset_path: Fundus:root=/data/Fundus
   batch_size_per_gpu: 64
 student:
   block_chunks: 4
