--- a/dinov2/configs/train/vitb14.yaml
+++ b/dinov2/configs/train/vitb14.yaml
@@ -6,13 +6,13 @@ ibot:
   head_n_prototypes: 131072
 train:
   batch_size_per_gpu: 64
-  dataset_path: Fundus:root=/data/Fundus
+  dataset_path: Fundus
   centering: sinkhorn_knopp
 student:
-  arch: vit_large
+  arch: vit_base
   patch_size: 14
   drop_path_rate: 0.2
-  ffn_layer: swiglufused
+  ffn_layer: mlp
   block_chunks: 4
 teacher:
   momentum_teacher: 0.994
@@ -23,4 +23,5 @@ optim:
   warmup_epochs: 80
   layerwise_decay: 1.0
 crops:
+  global_crops_size: 518
   local_crops_size: 98
